syntax = "proto3";

package shift;

option go_package = "entities/shift;shift";

message CreateShiftParams {
  int64 machine_id = 1;
  int64 shift_master = 2;
}

message ShiftResponse {
  CreateShiftParams data = 1;
}

service ShiftService {
  rpc Create(CreateShiftParams) returns (ShiftResponse);
}